--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
   <div id="view-charts" class="view-section">
     <div class="container">
       <h2 class="section-title">Charts dos Membros</h2>
-  
+   
       <div style="display:flex; gap:10px; margin-bottom:12px;">
         <input id="ch-q" placeholder="Buscar membro..." oninput="renderCharts()" style="flex:1;padding:12px;border:1px solid #eee;border-radius:12px;">
         <select id="ch-sort" onchange="renderCharts()" style="padding:12px;border:1px solid #eee;border-radius:12px;">
@@ -316,9 +316,9 @@
 
       <label style="display:flex;gap:10px;align-items:center;font-weight:900;color:#555;margin-bottom:12px;">
         <input id="ch-only-aside-center" type="checkbox" onchange="renderCharts()">
-        Mostrar apenas quem tem A-side
+        Mostrar apenas quem tem Senbatsu 
       </label>
-  
+   
       <div id="charts-list">
         <div style="text-align:center; padding:20px; color:#aaa;">Carregando...</div>
       </div>
@@ -568,8 +568,28 @@
       return tracks;
     }
 
+    // --- NOVA FUNÇÃO (Center só A-side) ---
+    function countAsideCentersFromTracks(tracks){
+      let c = 0;
+      (tracks || []).forEach(t => {
+        const labels = Array.isArray(t.labels) ? t.labels : [];
+        const norm = labels.map(l =>
+          String(l||"").toLowerCase().trim().replace(/\s+/g,"-")
+        );
+
+        const hasCenter = norm.includes("center");
+        const hasAside =
+          norm.includes("a-side") ||
+          norm.includes("aside") ||
+          norm.includes("a-side");
+
+        if (hasCenter && hasAside) c++;
+      });
+      return c;
+    }
+
+    // Mantida para compatibilidade, se necessário
     function countCentersFromTracks(tracks){
-      // conta track que tem label "center" (case-insensitive)
       let c = 0;
       (tracks||[]).forEach(t => {
         const labels = Array.isArray(t.labels) ? t.labels : [];
@@ -605,8 +625,8 @@
           team: m.Time || "",
           gen: m.Geracao || "",
           photo: getImgUrl(m.Foto) || "https://placehold.co/120x120?text=?",
-          songs: tracks.length,               // total de músicas listadas
-          centers: countCentersFromTracks(tracks), // quantos tracks com label "center"
+          songs: tracks.length,                // total de músicas listadas
+          centers: countAsideCentersFromTracks(tracks), // ⭐ center só em A-side
           asideSongs: countAsideFromTracks(tracks) // quantos A-side
         };
       });
@@ -634,6 +654,7 @@
         return;
       }
 
+      // ATUALIZADO: Label "Centers"
       box.innerHTML = stats.map(s => `
         <div class="chart-card">
           <img class="chart-photo" src="${s.photo}" onerror="this.src='https://placehold.co/120x120?text=?'">
@@ -643,8 +664,8 @@
           </div>
           <div class="chart-badges">
             <span class="chart-pill"><i class="fas fa-microphone"></i> ${s.songs} músicas</span>
-            <span class="chart-pill"><i class="fas fa-star"></i> ${s.centers} centers</span>
-            <span class="chart-pill" style="background:#fff0f5;color:#e91e63"><i class="fas fa-star"></i> ${s.asideSongs} A-side</span>
+            <span class="chart-pill"><i class="fas fa-star"></i> ${s.centers} Centers</span>
+            <span class="chart-pill" style="background:#fff0f5;color:#e91e63"><i class="fas fa-star"></i> ${s.asideSongs} Senbatsu</span>
           </div>
         </div>
       `).join("");
@@ -1028,8 +1049,8 @@
             "senbatsu": "fa-crown",      
             "solo": "fa-microphone",     
             "undergirls": "fa-layer-group",
-            "center": "fa-star",         
-            "unit": "fa-users"           
+            "center": "fa-star",          
+            "unit": "fa-users"            
         };
 
         try {
